--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -6,4 +6,6 @@
     <string name="photo">Foto</string>
     <string name="contacts">Contatos</string>
     <string name="logout">Deslogar</string>
+    <string name="splash_welcome">DEVELOPED</string>
+    <string name="splash_welcome2">CYBERDEVS</string>
 </resources>
